Address odd alignment issues in Chrome on some screen sizes

--- a/src/components/footnote-link/footnote-link.scss
+++ b/src/components/footnote-link/footnote-link.scss
@@ -24,8 +24,7 @@
   display: inline-block;
   font-size: ms.step(-2);
   font-weight: font-weight.$medium;
-  height: size.$square-footnote-link; /* 1 */
-  line-height: size.$square-footnote-link;
+  line-height: size.$square-footnote-link; /* 1 */
   min-width: size.$square-footnote-link; /* 1 */
   padding: 0 ms.step(-5); /* 1 */
   scroll-margin: ms.step(4); /* 2 */
